--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -1354,18 +1354,33 @@ data:
                   show_header_toggle: false
                 filter:
                   template: |
-                    [
-                      {% for state in states.sensor -%}
-                        {%- if state.attributes.friendly_name is defined and ('Atlantic Av' in state.attributes.friendly_name or 'Barclays' in state.attributes.friendly_name) and state.state not in ['unavailable', 'unknown'] -%}
-                          {%- set route = state.attributes.route_id | default('?') -%}
-                          {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                          {%- set dir = 'North' if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') else 'South' -%}
-                          {
-                            "entity": "{{ state.entity_id }}",
-                            "name": "{{ dir }}: {{ route }} to {{ headsign }}",
-                            "secondary_info": "last-updated"
-                          },
+                    {% set ns = namespace(north=[], south=[]) %}
+                    {% for state in states.sensor -%}
+                      {%- if state.attributes.friendly_name is defined and ('Atlantic Av' in state.attributes.friendly_name or 'Barclays' in state.attributes.friendly_name) and state.state not in ['unavailable', 'unknown'] -%}
+                        {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                        {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                          {%- set ns.north = ns.north + [state] -%}
+                        {%- else -%}
+                          {%- set ns.south = ns.south + [state] -%}
                         {%- endif -%}
+                      {%- endif -%}
+                    {%- endfor %}
+                    [
+                      { "type": "section", "label": "Northbound" },
+                      {% for state in ns.north -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endfor %}
+                      { "type": "section", "label": "Southbound" },
+                      {% for state in ns.south -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
                       {%- endfor %}
                     ]
                 sort:
@@ -1379,18 +1394,33 @@ data:
                   show_header_toggle: false
                 filter:
                   template: |
-                    [
-                      {% for state in states.sensor -%}
-                        {%- if state.attributes.friendly_name is defined and 'Bergen St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                          {%- set route = state.attributes.route_id | default('?') -%}
-                          {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                          {%- set dir = 'North' if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') else 'South' -%}
-                          {
-                            "entity": "{{ state.entity_id }}",
-                            "name": "{{ dir }}: {{ route }} to {{ headsign }}",
-                            "secondary_info": "last-updated"
-                          },
+                    {% set ns = namespace(north=[], south=[]) %}
+                    {% for state in states.sensor -%}
+                      {%- if state.attributes.friendly_name is defined and 'Bergen St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                        {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                        {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
+                          {%- set ns.north = ns.north + [state] -%}
+                        {%- else -%}
+                          {%- set ns.south = ns.south + [state] -%}
                         {%- endif -%}
+                      {%- endif -%}
+                    {%- endfor %}
+                    [
+                      { "type": "section", "label": "Northbound" },
+                      {% for state in ns.north -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endfor %}
+                      { "type": "section", "label": "Southbound" },
+                      {% for state in ns.south -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
                       {%- endfor %}
                     ]
                 sort:
@@ -1404,18 +1434,33 @@ data:
                   show_header_toggle: false
                 filter:
                   template: |
-                    [
-                      {% for state in states.sensor -%}
-                        {%- if state.attributes.friendly_name is defined and 'Fulton St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                          {%- set route = state.attributes.route_id | default('?') -%}
-                          {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                          {%- set dir = 'North' if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') else 'South' -%}
-                          {
-                            "entity": "{{ state.entity_id }}",
-                            "name": "{{ dir }}: {{ route }} to {{ headsign }}",
-                            "secondary_info": "last-updated"
-                          },
+                    {% set ns = namespace(north=[], south=[]) %}
+                    {% for state in states.sensor -%}
+                      {%- if state.attributes.friendly_name is defined and 'Fulton St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                        {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                        {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
+                          {%- set ns.north = ns.north + [state] -%}
+                        {%- else -%}
+                          {%- set ns.south = ns.south + [state] -%}
                         {%- endif -%}
+                      {%- endif -%}
+                    {%- endfor %}
+                    [
+                      { "type": "section", "label": "Northbound" },
+                      {% for state in ns.north -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endfor %}
+                      { "type": "section", "label": "Southbound" },
+                      {% for state in ns.south -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
                       {%- endfor %}
                     ]
                 sort:
@@ -1429,18 +1474,33 @@ data:
                   show_header_toggle: false
                 filter:
                   template: |
-                    [
-                      {% for state in states.sensor -%}
-                        {%- if state.attributes.friendly_name is defined and 'Lafayette Av' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                          {%- set route = state.attributes.route_id | default('?') -%}
-                          {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                          {%- set dir = 'North' if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') else 'South' -%}
-                          {
-                            "entity": "{{ state.entity_id }}",
-                            "name": "{{ dir }}: {{ route }} to {{ headsign }}",
-                            "secondary_info": "last-updated"
-                          },
+                    {% set ns = namespace(north=[], south=[]) %}
+                    {% for state in states.sensor -%}
+                      {%- if state.attributes.friendly_name is defined and 'Lafayette Av' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                        {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                        {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                          {%- set ns.north = ns.north + [state] -%}
+                        {%- else -%}
+                          {%- set ns.south = ns.south + [state] -%}
                         {%- endif -%}
+                      {%- endif -%}
+                    {%- endfor %}
+                    [
+                      { "type": "section", "label": "Northbound" },
+                      {% for state in ns.north -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endfor %}
+                      { "type": "section", "label": "Southbound" },
+                      {% for state in ns.south -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
                       {%- endfor %}
                     ]
                 sort:
@@ -1454,18 +1514,33 @@ data:
                   show_header_toggle: false
                 filter:
                   template: |
-                    [
-                      {% for state in states.sensor -%}
-                        {%- if state.attributes.friendly_name is defined and '57 St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                          {%- set route = state.attributes.route_id | default('?') -%}
-                          {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                          {%- set dir = 'North' if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') else 'South' -%}
-                          {
-                            "entity": "{{ state.entity_id }}",
-                            "name": "{{ dir }}: {{ route }} to {{ headsign }}",
-                            "secondary_info": "last-updated"
-                          },
+                    {% set ns = namespace(north=[], south=[]) %}
+                    {% for state in states.sensor -%}
+                      {%- if state.attributes.friendly_name is defined and '57 St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                        {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                        {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                          {%- set ns.north = ns.north + [state] -%}
+                        {%- else -%}
+                          {%- set ns.south = ns.south + [state] -%}
                         {%- endif -%}
+                      {%- endif -%}
+                    {%- endfor %}
+                    [
+                      { "type": "section", "label": "Northbound" },
+                      {% for state in ns.north -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endfor %}
+                      { "type": "section", "label": "Southbound" },
+                      {% for state in ns.south -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
+                          "secondary_info": "last-updated"
+                        },
                       {%- endfor %}
                     ]
                 sort:
